--- a/views/index.hbs
+++ b/views/index.hbs
@@ -81,7 +81,6 @@
              $.get('/allpros',(pros)=>{
             let r=''
             let q=''
-            $('#pros').empty()
             $('#main').empty()
             
             for(let i=0;i<pros.length;i++){
@@ -112,8 +111,8 @@
             <br/>
         </div>`
             }
-            $('#pros').append(r)
-            $('#main').append(q)
+            
+            $('#main').append(r)
         })
             window.addtocart=function(e){
             $.get(`/addcart?uid=${$('#uid').text()}&name=${$(e).parent().attr('name')}&vendor=${$(e).parent().attr('vendor')}&price=${$(e).parent().attr('price')}&cat=${$(e).parent().attr('cat')}`,(something)=>{
