--- a/views/index.hbs
+++ b/views/index.hbs
@@ -82,7 +82,7 @@
             let r=''
             let q=''
             $('#main').empty()
-            
+            console.log(pros)
             for(let i=0;i<pros.length;i++){
                 r+=`<div class="col-xl-4 col-lg-4 col-md-6 col-sm-10 col-xs-10">
                 <div class="card" style="width: 18rem;">
