--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -43,13 +43,14 @@
                                 </li><span style="visibility: hidden;height:0px" id="uid">{{user.id}}</span>
                               </ul>
                               <form class="form-inline my-2 my-lg-0">
-                                <a href="/bill" class="btn btn-info">Buy</a>&nbsp;&nbsp;&nbsp;
+                                <a href="/bill" class="btn btn-info" id="buybtn">BUY</a>&nbsp;&nbsp;&nbsp;
                                 <h4>Cart</h4>
                                 
                               </form>
                             </div>
                     </nav><br/>
 <div class="container" id="mycart">
+    
     {{!--  --}}
     {{!-- <div class="alert alert-warning" role="alert">
   <div class="row">
@@ -67,7 +68,21 @@
         (function(){
             $.get(`/getcart?uid=${$('#uid').text()}`,(cart)=>{
             let f=''
-            for(let i=0;i<cart.length;i++){
+            if(cart.length==0){
+                $('#mycart').html(`<div class="row">
+        <div class="col"></div>
+        <div class="col"><div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>CART EMPTY</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div></div>
+        <div class="col"></div>
+    </div>`)
+    
+            }
+            else{
+                for(let i=0;i<cart.length;i++){
                 // if(cart[i].uid==parseInt($('#uid').text())){
                     f+=`<div class="alert alert-warning" role="alert">
                 <div class="row">
@@ -82,6 +97,8 @@
                 
             }
             $('#mycart').append(f)
+            }
+            
         })
          window.rem=function(e,i){
              $.get(`/rem?id=${i}`,(ele)=>{
