Search for products added
Signed-off-by: Sarvjit <sarvjityadav1997@gmail.com>

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -90,7 +90,7 @@
                     <div class="col">Price- ${cart[i].price}</div>
                     <div class="col">Tax- ${cart[i].tax}</div>
                     <div class="col">Total- ${cart[i].total}</div>
-                    <div class="col"><button class="btn btn-danger" onclick=rem(this,${cart[i].id})>Remove</button></div>
+                    <div class="col"><button class="btn btn-danger" data-dismiss="alert" onclick=rem(this,${cart[i].id})>Remove</button></div>
                   </div>
                 </div>`
                 
