--- a/views/main.hbs
+++ b/views/main.hbs
@@ -72,6 +72,26 @@
                               </form>
                             </div>
                     </nav>
+                    
+                    <nav class="navbar navbar-light bg-light navbar-expand-lg">
+                        <div class="container-fluid">
+                            <div class="row">
+                            <div class="col-xs-10 col-sm-5 col-md-5 col-lg-4 col-xl-4">
+                                <input class="form-control mr-sm-2" type="search" id="prodsrch" placeholder="Search" aria-label="Search">
+                            </div>
+                            <div class="col-xs-10 col-sm-5 col-md-5 col-lg-3 col-xl-3">
+                                <button class="btn btn-outline-success my-2 my-sm-0" id="psrchbtn">Search for products</button>
+                            </div>
+                            <div class="col-xs-10 col-sm-10 col-md-10 col-lg-5 col-xl-5 font-weight-light">
+                                Try keeping first letter capital if you are not getting the desired results.
+                            </div>
+                        </div>
+                        </div>
+                        
+                        
+                        
+                    
+                    </nav>
     <br/>
     
     <div class="container border border-success" id="srchcon" style="visibility:hidden">
@@ -211,6 +231,31 @@
        })
          $('#drop').click(function(){
              $('#noti').css('color','white')
+         })
+         $('#psrchbtn').click(function(){
+             $.get(`/psrch?substr=${$('#prodsrch').val()}`,(pros)=>{
+                 console.log(pros)
+                 let y=''
+               for(let i=0;i<pros.length;i++){
+                   y+=`<div class="col-xl-4 col-lg-4 col-md-6 col-sm-10 col-xs-10">
+            <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="${pros[i].imgurl}" style="width:100%" alt="Card image cap">
+            <div class="card-body" pid="${pros[i].id}" name="${pros[i].name}" vendor="${pros[i].vendor}" price="${pros[i].price}" cat="${pros[i].cat}">
+                <h5 class="card-title">${pros[i].name}</h5>
+                <p class="card-text">Vendor- ${pros[i].vendor}</p>
+                <p class="card-text">Price- ${pros[i].price}</p>
+                <p class="card-text">Category- ${pros[i].cat}
+                </p>
+                <button class="btn btn-primary" onclick="addtocart(this)">Add to cart</button>
+            </div>
+            </div>
+            <br/>
+        </div>
+                   `
+               }
+               $('#srchcon').css('visibility','visible')
+               $('#srchmain').html(y)
+             })
          })
     })
 </script>
