--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -69,7 +69,7 @@
                         <div class="col-1"></div>
                         <div class="col">
                             <form id="formph" action='/up' enctype="multipart/form-data" method="POST">
-                            <input type="file" class="btn btn-primary p-0 m-0" name="photo" id="ph"><br/><br/>
+                            <input type="file" class="btn btn-secondary p-0 m-0" name="photo" id="ph"><br/><br/>
                             <input type="submit" class="btn btn-warning" value="Submit Photo">
                             </form>
                         </div>
